# lakekeeper

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  README.md  deny.toml  index.html  justfile
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.sqlx/: query-01136443202988753fd0134372e025f5353617f565347f9c18ddb98a5e44a788.json  query-019ab2373627f1aacf82504b90f05d0a3eb27942bbfb4beceac9f077e2a4e725.json  query-01eda539ce8aaa7cd32ef87c0d70f583255da7c1ef42445ee16af71e667cdfdb.json  query-02fdad1dce55a10fed77a46c1ff5c03a65f3e509accbe1d0255d91bba876dd5d.json  query-040fd86a4f0e2860f5fc1d387bd7804b9f1c3af3c48bd6075ebbfed6b596b8c1.json  query-045d48be751d921e4375266e2c8930e9b67f7960cc32b126c32f3fffff83a3d1.json  query-04d0f4ace8d9adcfcb571c1a46bd5142de48a5f5391a6a5d61246c64a7ed304c.json  query-06008ceac1e6d9b23c1411d3091273759c410ad6f000ad42a24ef29ab481dc1d.json  query-0628fbde58a3f6eaf6870158d31ab67eb008755c61b6cc6f2b7608900e014137.json  query-0902b3c098641f60bcaf012a39082c879fd0b4ad7b2928c7c1ea33798216c053.json  query-096eba228becd7427130d0d94a6318374dfbb6d982ab8c43ae4575f6661a46db.json  query-0a5cff61b07c868ce7c474ab1ea5eddf956c5d04339531cf6916e416ca415fd6.json  query-0ae506a3e9bed7d6c28e5009f82ecc7160d546b77188629b2c62b8b582639195.json  query-0aeb5d6e3f65746cefe75e374c69780174a7474580da84345cb777e2343d0280.json  query-0b04e3de768bc4538188913f64c30f9e66285749058f8c127159ebc1c1dd8747.json  query-0b6e6f3160161132b4e3731700120c214d206457591bf3eacbda3fb0ec38c1bc.json  query-0b6ef84d6e0fb33a39cefc69a309981191f0e4720a01a19794ee7f884d69a48b.json  query-0b9400b8f1f24784d3c7e387442d9d0e240b7740b0a04eb40f2811fddeca3f1f.json  query-0c1b04ae0498ddf74e3d1018243e9d3bc49672030a9aaddd97b3b1964463cbba.json  query-0d2a55d329c42b0a5b62687b042e3b2a243ee703043cbfe92de863e432826d44.json  query-0eb0f3cbb5503a213c1ee958c308d11ab8464a826455f5f447e4284a77ea544f.json  query-0eef2c01a1e39f3a36f5f25ffdf78cf8983df324721ffd4f4168367bc9386755.json  query-0f066e1d3031d69bbd83125541916a410c519ae9e3705e7fbc335abaf93e2abd.json  query-0f1f103f788438bd4ecd4813b42f5929ae0567dfc883b969355328a7f34ab354.json  query-0ff45358c8989838c7a9ede50a93682c00c36e700d810d1f01d56174bcaac277.json  query-13c9d4d97f27858856f98f940b834735793a11997c6e55e8add91c7bcb934fa2.json  query-142acce9a9ab2c29a5cdbaeefe2b258c783ad1a7fa47fcc30e355520478fdb60.json  query-145149e78fec4da0140d622dff32841d66e4fe280dceef13fa9c190b97587d62.json  query-172364579f42bfa61c9c9f3c75abdfdabea1f0fa69aa93d7f3fcc22c4ad95bd2.json  query-17e2c2187af51d51d7657029586aed05b609ea1d730b07fd373ba6e20aef8bd6.json  query-182e8c64d4e06fdf12909937894cdb9fa071627f107e9c4b1360af2314ce10c6.json  query-18be9a25b054e4352bf6220e812ac301424384cf2281c044e857b1ab03a0155f.json  query-18fb2ceff5fe5062c535dc1f918441580ea4a2aaf1fea9859d7cf4a5c1d079e1.json  query-19c7f12ec1c016d0a1c138d9018dabb6e58a37cc65b6a6da469a9767e9ef8aef.json  query-19f0aa4c5add714cb1b6da5661edcd36ea5d28bd6a9b088786bb9fefbc2f77fa.json  query-1a7333602cd43785c8f98cb2c5616d6034c751faf430ae9e97156637379c4820.json  query-1ac9f439db1b3f17a85d9fbffc9d79177667a9fe67804ef89f6d607cf5070707.json  query-1b63f41221fc9b9008289c6092d278e17488fa9cf61aab4cd8ffa4f210a300e5.json  query-1e36c7781b1223f732691c4d2e705521d3d078d90adedc3d183068526cf8c025.json  query-1e7149ea0345e383726a86a661fdef9c31c04325c751eda35871df8825980c4a.json  (+292 more)
api/: index.html
crates/authz-opa/: Cargo.toml
crates/authz-opa/src/: authorizer.rs  client.rs  config.rs  error.rs  health.rs  input.rs  lib.rs
crates/authz-opa/tests/: opa_integration.rs
crates/authz-openfga/: Cargo.toml
crates/authz-openfga/src/: api.rs  authorizer.rs  check.rs  client.rs  config.rs  entities.rs  error.rs  health.rs  lib.rs  migration.rs  models.rs  reconcile.rs  relations.rs
crates/authz-openfga/src/migration/: migration_fns_v4.rs
crates/io/: Cargo.toml
crates/io/src/: adls.rs  error.rs  gcs.rs  iceberg_bridge.rs  lib.rs  location.rs  memory.rs  s3.rs
crates/io/src/adls/: adls_error.rs  adls_location.rs  adls_storage.rs  adls_writer.rs  credentials.rs  shared_key_policy.rs
crates/io/src/gcs/: gcs_error.rs  gcs_location.rs  gcs_storage.rs
crates/io/src/s3/: s3_error.rs  s3_location.rs  s3_storage.rs
crates/io/tests/: integration_tests.rs
crates/lakekeeper-storage-postgres/: Cargo.toml
crates/lakekeeper-storage-postgres/migrations/: 20260607000000_role_membership_endpoints.sql  20260607000000_role_membership_endpoints_and_user_name_nullable.sql
crates/lakekeeper-storage-postgres/src/: advisory_lock.rs  bootstrap.rs  catalog.rs  config.rs  idempotency.rs  lib.rs  namespace.rs  pagination.rs  role.rs  role_assignment.rs  secrets.rs  tasks.rs  user.rs  warehouse.rs
crates/lakekeeper-storage-postgres/src/endpoint_statistics/: list.rs  mod.rs  sink.rs
crates/lakekeeper-storage-postgres/src/migrations/: mod.rs
crates/lakekeeper-storage-postgres/src/tabular/: generic_table.rs  load_by_location.rs  mod.rs  protection.rs
crates/lakekeeper-storage-postgres/src/tabular/table/: commit.rs  common.rs  create.rs  mod.rs
crates/lakekeeper-storage-postgres/src/tabular/view/: load.rs  mod.rs
crates/lakekeeper-storage-postgres/src/tasks/: cleanup_task_logs_older_than.rs  get_task_details.rs  list_tasks.rs  resolve_tasks.rs
crates/lakekeeper-storage-postgres/src/tests/: drop_recursive.rs  drop_warehouse.rs  endpoint_stats.rs  generic_table_name_collision.rs  generic_table_protection.rs  internal_helper.rs  mod.rs  namespace_ops.rs  referenced_by.rs  referenced_by_generic_table.rs  role_ops.rs  soft_deletion.rs  stats.rs  tasks.rs  warehouse_ops.rs
docker/: bin.Dockerfile  full-debug.Dockerfile  full.Dockerfile
docker-build/: build-with-alpine.Dockerfile
docker-compose/: docker-compose.yaml
docs/: mkdocs.yml
docs copy/: index.md
examples/: README.md  Readme.md
getting-started/: index.html
lance-lakekeeper-test/: docker-compose.yaml  requirements.txt  run.sh  test_lance_lakekeeper.py
openapi/: management-open-api.yaml  rest-catalog-open-api.yaml
release-please/: .release-please-manifest.json  (+1 more)
(+1100 files in other folders)
