[package]
name = "lakekeeper-authz-openfga"
version = "0.10.0"
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

description = "OpenFGA Authorizer for Lakekeeper"
keywords = ["iceberg", "rest", "lakekeeper", "openfga"]

[lib]

[dependencies]
lakekeeper = { path = "../lakekeeper", default-features = false }
futures = { workspace = true }
openfga-client = { version = "0.4", features = ["auth-middle"] }
tracing = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
http = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
figment = { workspace = true }
veil = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
strum_macros = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
figment = { workspace = true, features = ["test"] }
