[package]
name = "lakekeeper-io"
resolver = "2"
version = "0.9.3"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
Lakekeeper IO
"""

[features]
all = ["storage-s3", "storage-adls", "storage-gcs", "storage-in-memory"]
storage-s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:aws-credential-types"]
storage-adls = []
storage-gcs = []
storage-in-memory = []
default = ["storage-s3"]

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true, features = [
    "behavior-version-latest",
], optional = true }
aws-credential-types = { version = "^1.2", optional = true }
aws-sdk-s3 = { version = "^1.65", optional = true }
aws-smithy-http-client = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tryhard = { workspace = true }
typed-builder = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
veil = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
paste = "1.0"
tempfile = "3.0"
tokio = { workspace = true }
uuid = { workspace = true }
